--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,17 +20,20 @@
     display: -webkit-box;
     display: flex;
     -webkit-box-pack: center;
-            justify-content: center;
+    justify-content: center;
     -webkit-box-align: center;
-            align-items: center;
+    align-items: center;
 }
+
 .fullpage-loader .fullpage-loader-logo {
     position: relative;
 }
+
 .fullpage-loader .fullpage-loader-logo img {
     width: 400px;
     height: auto;
 }
+
 .fullpage-loader .fullpage-loader-logo:after {
     content: "";
     height: 100%;
@@ -39,32 +42,37 @@
     top: 0;
     left: 0;
     -webkit-animation: shine 2.5s infinite cubic-bezier(0.42, 0, 0.58, 1);
-            animation: shine 2.5s infinite cubic-bezier(0.42, 0, 0.58, 1);
+    animation: shine 2.5s infinite cubic-bezier(0.42, 0, 0.58, 1);
     background: rgba(255, 255, 255, 0.8);
     background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(50%, white), to(rgba(255, 255, 255, 0)));
     background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 50%, rgba(255, 255, 255, 0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#00ffffff', GradientType=1);
 }
+
 @-webkit-keyframes shine {
     0% {
-      -webkit-transform: translateX(-100%) skew(-30deg);
-              transform: translateX(-100%) skew(-30deg);
+        -webkit-transform: translateX(-100%) skew(-30deg);
+        transform: translateX(-100%) skew(-30deg);
     }
+
     100% {
-      -webkit-transform: translateX(200%) skew(-30deg);
-              transform: translateX(200%) skew(-30deg);
+        -webkit-transform: translateX(200%) skew(-30deg);
+        transform: translateX(200%) skew(-30deg);
     }
 }
+
 @keyframes shine {
     0% {
-      -webkit-transform: translateX(-100%) skew(-30deg);
-              transform: translateX(-100%) skew(-30deg);
+        -webkit-transform: translateX(-100%) skew(-30deg);
+        transform: translateX(-100%) skew(-30deg);
     }
+
     100% {
-      -webkit-transform: translateX(200%) skew(-30deg);
-              transform: translateX(200%) skew(-30deg);
+        -webkit-transform: translateX(200%) skew(-30deg);
+        transform: translateX(200%) skew(-30deg);
     }
 }
+
 .fullpage-loader--invisible {
     opacity: 0;
 }
@@ -73,15 +81,24 @@
    ------------------------------------------------------------------------------------------------------  */
 /* Fade in animation */
 @keyframes fade-in {
-    from {opacity: 0; transform: scale(.7,.7)}
-    to {opacity: 1;}
+    from {
+        opacity: 0;
+        transform: scale(.7, .7)
+    }
+
+    to {
+        opacity: 1;
+    }
 }
+
 .fade-in-element {
-  animation: fade-in 1.4s;
+    animation: fade-in 1.4s;
 }
+
 .hidden {
     opacity: 0;
 }
+
 /* ------------------------------------------------------------------------------------------------------
    ------------------------------------------------------------------------------------------------------  */
 /* Dropdown animation */
@@ -89,17 +106,21 @@
     0% {
         height: 0vh;
     }
+
     100% {
         height: 100vh;
     }
 }
+
 @keyframes dropdown-up {
     0% {
         height: 100vh;
     }
+
     99% {
         height: 0vh;
     }
+
     100% {
         display: none;
     }
@@ -116,6 +137,7 @@ html {
     overflow-x: hidden;
     overflow-y: auto;
 }
+
 body {
     margin: 0;
     padding: p;
@@ -132,7 +154,27 @@ span {
 /* ------------------------------------------------------------------------------------------------------
    ------------------------------------------------------------------------------------------------------  */
 /* Navigation */
-.top-navigation {
+@import url(https://fonts.googleapis.com/css?family=Ek+Mukta:200);
+
+body {
+    margin: 0;
+    line-height: 1.4;
+    background: #e1e1e1;
+}
+
+.window {
+    position: relative;
+    display: block;
+    width: 360px;
+    height: 567px;
+    margin: 100px auto 0;
+    box-shadow: 0 0 65px 15px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    border-radius: 3px;
+    background: #f1f1f1;
+}
+
+.window .header {
     position: absolute;
     display: block;
     top: 0;
@@ -141,43 +183,24 @@ span {
     width: 100%;
     background: rgba(0, 0, 0, 0.8);
     overflow: hidden;
-    -webkit-transition: all 0.5s ease-out, background 1s ease-out;
     transition: all 0.5s ease-out, background 1s ease-out;
-    -webkit-transition-delay: 0.2s;
-            transition-delay: 0.2s;
+    transition-delay: 0.2s;
     z-index: 1;
 }
-header .top-navigation .burger-container {
-    visibility: hidden;
+
+.window .header .burger-container {
     position: relative;
     display: inline-block;
     height: 50px;
     width: 50px;
     cursor: pointer;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-    -webkit-transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    transform: rotate(0deg);
     transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    user-select: none;
     -webkit-tap-highlight-color: transparent;
 }
-header .top-navigation .content-container {
-    position: fixed;
-    width: 80vw;
-    height: 50px;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-}
-header .top-navigation .content-container img {
-    height: 20px;
-    float: left;
-    margin-top: 15px;
-}
-header .top-navigation .burger-container #burger {
+
+.window .header .burger-container #burger {
     width: 18px;
     height: 8px;
     position: relative;
@@ -185,92 +208,96 @@ header .top-navigation .burger-container #burger {
     margin: -4px auto 0;
     top: 50%;
 }
-header .top-navigation .burger-container #burger .bar {
+
+.window .header .burger-container #burger .bar {
     width: 100%;
     height: 1px;
     display: block;
     position: relative;
-    background: #FFF;
-    -webkit-transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    background: #fff;
     transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    -webkit-transition-delay: 0s;
-            transition-delay: 0s;
+    transition-delay: 0s;
 }
-header .top-navigation .burger-container #burger .bar.topBar {
-    -webkit-transform: translateY(0px) rotate(0deg);
-            transform: translateY(0px) rotate(0deg);
+
+.window .header .burger-container #burger .bar.topBar {
+    transform: translateY(0px) rotate(0deg);
 }
-header .top-navigation .burger-container #burger .bar.btmBar {
-    -webkit-transform: translateY(6px) rotate(0deg);
-            transform: translateY(6px) rotate(0deg);
+
+.window .header .burger-container #burger .bar.btmBar {
+    transform: translateY(6px) rotate(0deg);
 }
-header .top-navigation ul.menu {
+
+.window .header .icon {
+    display: inline-block;
+    position: absolute;
+    height: 100%;
+    line-height: 50px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    color: #fff;
+    font-size: 22px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.window .header .icon.icon-bag {
+    right: 0;
+    top: 0;
+    left: auto;
+    transform: translateX(0px);
+    transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    transition-delay: 0.65s;
+}
+
+.window .header ul.menu {
     position: relative;
     display: block;
     padding: 0px 48px 0;
     list-style: none;
-    visibility: hidden;
 }
-header .top-navigation .content-container ul.row-listed {
-    display: flex;
-    float: right;
-    list-style-type: none;
-    text-decoration: none;
-}
-header .top-navigation .content-container ul.row-listed li a {
-    margin-left: 50px;
-    color: #FFF;
-    list-style-type: none;
-    text-decoration: none;
-    opacity: 0.8;
-}
-header .top-navigation .content-container ul.row-listed li a:hover {
-    opacity: 1;
-}
-header .top-navigation ul.menu li.menu-item {
+
+.window .header ul.menu li.menu-item {
     border-bottom: 1px solid #333;
     margin-top: 5px;
-    -webkit-transform: scale(1.15) translateY(-30px);
-            transform: scale(1.15) translateY(-30px);
+    transform: scale(1.15) translateY(-30px);
     opacity: 0;
-    -webkit-transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
     transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
 }
-header .top-navigation ul.menu li.menu-item:nth-child(1) {
-    -webkit-transition-delay: 0.49s;
-            transition-delay: 0.49s;
+
+.window .header ul.menu li.menu-item:nth-child(1) {
+    transition-delay: 0.49s;
 }
-header .top-navigation ul.menu li.menu-item:nth-child(2) {
-    -webkit-transition-delay: 0.42s;
-            transition-delay: 0.42s;
+
+.window .header ul.menu li.menu-item:nth-child(2) {
+    transition-delay: 0.42s;
 }
-header .top-navigation ul.menu li.menu-item:nth-child(3) {
-    -webkit-transition-delay: 0.35s;
-            transition-delay: 0.35s;
+
+.window .header ul.menu li.menu-item:nth-child(3) {
+    transition-delay: 0.35s;
 }
-header .top-navigation ul.menu li.menu-item:nth-child(4) {
-    -webkit-transition-delay: 0.28s;
-            transition-delay: 0.28s;
+
+.window .header ul.menu li.menu-item:nth-child(4) {
+    transition-delay: 0.28s;
 }
-header .top-navigation ul.menu li.menu-item:nth-child(5) {
-    -webkit-transition-delay: 0.21s;
-            transition-delay: 0.21s;
+
+.window .header ul.menu li.menu-item:nth-child(5) {
+    transition-delay: 0.21s;
 }
-header .top-navigation ul.menu li.menu-item:nth-child(6) {
-    -webkit-transition-delay: 0.14s;
-            transition-delay: 0.14s;
+
+.window .header ul.menu li.menu-item:nth-child(6) {
+    transition-delay: 0.14s;
 }
-header .top-navigation ul.menu li.menu-item:nth-child(7) {
-    -webkit-transition-delay: 0.07s;
-            transition-delay: 0.07s;
+
+.window .header ul.menu li.menu-item:nth-child(7) {
+    transition-delay: 0.07s;
 }
-header .top-navigation ul.menu li.menu-item a {
+
+.window .header ul.menu li.menu-item a {
     display: block;
     position: relative;
-    color: #FFF;
-    font-family: "Ek Mukta", sans-serif;
+    color: #fff;
+    font-family: 'Ek Mukta', sans-serif;
     font-weight: 100;
     text-decoration: none;
     font-size: 22px;
@@ -278,99 +305,114 @@ header .top-navigation ul.menu li.menu-item a {
     font-weight: 200;
     width: 100%;
 }
-header .top-navigation.menu-opened {
+
+.window .header.menu-opened {
     height: 100%;
     background-color: #000;
-    -webkit-transition: all 0.3s ease-in, background 0.5s ease-in;
     transition: all 0.3s ease-in, background 0.5s ease-in;
-    -webkit-transition-delay: 0.25s;
-            transition-delay: 0.25s;
+    transition-delay: 0.25s;
 }
-header .top-navigation.menu-opened .burger-container {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
+
+.window .header.menu-opened .burger-container {
+    transform: rotate(90deg);
 }
-header .top-navigation.menu-opened .burger-container #burger .bar {
-    -webkit-transition: all 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+
+.window .header.menu-opened .burger-container #burger .bar {
     transition: all 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    -webkit-transition-delay: 0.2s;
-            transition-delay: 0.2s;
+    transition-delay: 0.2s;
 }
-header .top-navigation.menu-opened .burger-container #burger .bar.topBar {
-    -webkit-transform: translateY(4px) rotate(45deg);
-            transform: translateY(4px) rotate(45deg);
+
+.window .header.menu-opened .burger-container #burger .bar.topBar {
+    transform: translateY(4px) rotate(45deg);
 }
-header .top-navigation.menu-opened .burger-container #burger .bar.btmBar {
-    -webkit-transform: translateY(3px) rotate(-45deg);
-            transform: translateY(3px) rotate(-45deg);
+
+.window .header.menu-opened .burger-container #burger .bar.btmBar {
+    transform: translateY(3px) rotate(-45deg);
 }
-header .top-navigation.menu-opened ul.menu li.menu-item {
-    -webkit-transform: scale(1) translateY(0px);
-            transform: scale(1) translateY(0px);
+
+.window .header.menu-opened ul.menu li.menu-item {
+    transform: scale(1) translateY(0px);
     opacity: 1;
 }
-header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(1) {
-    -webkit-transition-delay: 0.27s;
-            transition-delay: 0.27s;
+
+.window .header.menu-opened ul.menu li.menu-item:nth-child(1) {
+    transition-delay: 0.27s;
 }
-header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(2) {
-    -webkit-transition-delay: 0.34s;
-            transition-delay: 0.34s;
+
+.window .header.menu-opened ul.menu li.menu-item:nth-child(2) {
+    transition-delay: 0.34s;
 }
-header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(3) {
-    -webkit-transition-delay: 0.41s;
-            transition-delay: 0.41s;
+
+.window .header.menu-opened ul.menu li.menu-item:nth-child(3) {
+    transition-delay: 0.41s;
 }
-header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(4) {
-    -webkit-transition-delay: 0.48s;
-            transition-delay: 0.48s;
+
+.window .header.menu-opened ul.menu li.menu-item:nth-child(4) {
+    transition-delay: 0.48s;
 }
-header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(5) {
-    -webkit-transition-delay: 0.55s;
-            transition-delay: 0.55s;
+
+.window .header.menu-opened ul.menu li.menu-item:nth-child(5) {
+    transition-delay: 0.55s;
 }
-header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(6) {
-    -webkit-transition-delay: 0.62s;
-            transition-delay: 0.62s;
+
+.window .header.menu-opened ul.menu li.menu-item:nth-child(6) {
+    transition-delay: 0.62s;
 }
-header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(7) {
-    -webkit-transition-delay: 0.69s;
-            transition-delay: 0.69s;
+
+.window .header.menu-opened ul.menu li.menu-item:nth-child(7) {
+    transition-delay: 0.69s;
 }
-header .top-navigation.menu-opened .icon.icon-bag {
-    -webkit-transform: translateX(75px);
-            transform: translateX(75px);
-    -webkit-transition-delay: 0.3s;
-            transition-delay: 0.3s;
+
+.window .header.menu-opened .icon.icon-bag {
+    transform: translateX(75px);
+    transition-delay: 0.3s;
 }
-header .content {
-    font-family: "Ek Mukta", sans-serif;
+
+.window .content {
+    font-family: 'Ek Mukta', sans-serif;
     padding: 67px 4% 0;
     text-align: justify;
     overflow: scroll;
     max-height: 100%;
 }
-header .content::-webkit-scrollbar {
+
+.window .content::-webkit-scrollbar {
     display: none;
 }
-header .content h2 {
+
+.window .content h2 {
     margin-bottom: 0px;
     letter-spacing: 1px;
 }
-header .content img {
+
+.window .content img {
     width: 95%;
     position: relative;
     display: block;
     margin: 75px auto 75px;
 }
-header .content img:nth-of-type(2) {
+
+.window .content img:nth-of-type(2) {
     margin: 75px auto;
+}
+
+@media (max-width: 600px) {
+    .window {
+        width: 100%;
+        height: 100vh;
+        margin: 0;
+        border-radius: 0px;
+    }
+
+    .window .header {
+        position: fixed;
+    }
 }
 
 /* ------------------------------------------------------------------------------------------------------
    ------------------------------------------------------------------------------------------------------  */
 /* Banner */
-header .banner {
+.banner {
     background-color: #1f1f1f;
     width: 100vw;
     height: 30vh;
@@ -380,7 +422,8 @@ header .banner {
     transform: translate(-50%, 0);
     position: relative;
 }
-header .banner .text {
+
+.banner .text {
     text-align: center;
     position: absolute;
     width: 100%;
@@ -388,20 +431,23 @@ header .banner .text {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-header .banner .text h1 {
+
+.banner .text h1 {
     color: #fbfbfb;
     font-size: 80px;
     font-weight: bold;
     line-height: 0.4;
 }
-header .banner .text .text-type {
+
+.banner .text .text-type {
     color: #fbfbfb;
     font-size: 60px;
     font-weight: 400;
     border-right: 2px solid #fbfbfb;
     padding-right: 5px;
 }
-header .banner .text .buttons button {
+
+.banner .text .buttons button {
     margin-top: 50px;
     margin-left: 20px;
     margin-right: 20px;
@@ -411,7 +457,8 @@ header .banner .text .buttons button {
     opacity: 0.95;
     border: 2px solid #fbfbfb;
 }
-header .banner .text .buttons button span {
+
+.banner .text .buttons button span {
     color: #fbfbfb;
     font-size: 30px;
 }
@@ -420,59 +467,8 @@ header .banner .text .buttons button span {
    ------------------------------------------------------------------------------------------------------  */
 /* Adjusting For Screen Size */
 
-@media only screen and (max-width: 600px) {
-    /* Navigation */
-    header {
-        width: 100%;
-        height: 100vh;
-        margin: 0;
-        border-radius: 0px;
-    }
-    header .top-navigation {
-        position: fixed;
-    }
-    header .top-navigation .content-container img {
-        position: absolute;
-        margin-top: 25px;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    header .top-navigation .burger-container {
-        visibility: visible;
-    }
-    header .top-navigation ul.menu {
-        visibility: visible;
-    }
-    header .top-navigation .content-container ul.row-listed {
-        visibility: hidden; 
-    }
+@media only screen and (min-width: 479px) and (max-width: 767px) {}
 
-    /* Banner */
-    header .banner .text h1 {
-        font-size: 30px;
-    }
-    header .banner .text .text-type {
-        font-size: 20px;
-    }
-    header .banner .text .buttons button {
-        margin-top: 30px;
-        margin-left: 10px;
-        margin-right: 10px;
-        width: 100px;
-    }
-    header .banner .text .buttons button span {
-        font-size: 20px;
-    }
-} 
+@media only screen and (min-width: 767px) and (max-width: 991px) {}
 
-@media only screen and (min-width: 479px) and (max-width: 767px){
-    
-}
-
-@media only screen and (min-width: 767px) and (max-width: 991px){
-    
-}
-
-@media only screen and (min-width: 991px) and (max-width: 1600px){
-    
-}
+@media only screen and (min-width: 991px) and (max-width: 1600px) {}
