--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,15 +154,7 @@ span {
 /* ------------------------------------------------------------------------------------------------------
    ------------------------------------------------------------------------------------------------------  */
 /* Navigation */
-@import url(https://fonts.googleapis.com/css?family=Ek+Mukta:200);
-
-body {
-    margin: 0;
-    line-height: 1.4;
-    background: #e1e1e1;
-}
-
-.window {
+header {
     position: relative;
     display: block;
     width: 360px;
@@ -174,7 +166,7 @@ body {
     background: #f1f1f1;
 }
 
-.window .header {
+header .top-navigation {
     position: absolute;
     display: block;
     top: 0;
@@ -183,12 +175,12 @@ body {
     width: 100%;
     background: rgba(0, 0, 0, 0.8);
     overflow: hidden;
-    transition: all 0.5s ease-out, background 1s ease-out;
+    transition: all 0.5s ease-out, background-color 1s ease-out;
     transition-delay: 0.2s;
     z-index: 1;
 }
 
-.window .header .burger-container {
+header .top-navigation .burger-container {
     position: relative;
     display: inline-block;
     height: 50px;
@@ -200,7 +192,7 @@ body {
     -webkit-tap-highlight-color: transparent;
 }
 
-.window .header .burger-container #burger {
+header .top-navigation .burger-container #burger {
     width: 18px;
     height: 8px;
     position: relative;
@@ -209,7 +201,7 @@ body {
     top: 50%;
 }
 
-.window .header .burger-container #burger .bar {
+header .top-navigation .burger-container #burger .bar {
     width: 100%;
     height: 1px;
     display: block;
@@ -219,45 +211,22 @@ body {
     transition-delay: 0s;
 }
 
-.window .header .burger-container #burger .bar.topBar {
+header .top-navigation .burger-container #burger .bar.topBar {
     transform: translateY(0px) rotate(0deg);
 }
 
-.window .header .burger-container #burger .bar.btmBar {
+header .top-navigation .burger-container #burger .bar.btmBar {
     transform: translateY(6px) rotate(0deg);
 }
 
-.window .header .icon {
-    display: inline-block;
-    position: absolute;
-    height: 100%;
-    line-height: 50px;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    color: #fff;
-    font-size: 22px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.window .header .icon.icon-bag {
-    right: 0;
-    top: 0;
-    left: auto;
-    transform: translateX(0px);
-    transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    transition-delay: 0.65s;
-}
-
-.window .header ul.menu {
+header .top-navigation ul.menu {
     position: relative;
     display: block;
     padding: 0px 48px 0;
     list-style: none;
 }
 
-.window .header ul.menu li.menu-item {
+header .top-navigation ul.menu li.menu-item {
     border-bottom: 1px solid #333;
     margin-top: 5px;
     transform: scale(1.15) translateY(-30px);
@@ -265,39 +234,38 @@ body {
     transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
 }
 
-.window .header ul.menu li.menu-item:nth-child(1) {
+header .top-navigation ul.menu li.menu-item:nth-child(1) {
     transition-delay: 0.49s;
 }
 
-.window .header ul.menu li.menu-item:nth-child(2) {
+header .top-navigation ul.menu li.menu-item:nth-child(2) {
     transition-delay: 0.42s;
 }
 
-.window .header ul.menu li.menu-item:nth-child(3) {
+header .top-navigation ul.menu li.menu-item:nth-child(3) {
     transition-delay: 0.35s;
 }
 
-.window .header ul.menu li.menu-item:nth-child(4) {
+header .top-navigation ul.menu li.menu-item:nth-child(4) {
     transition-delay: 0.28s;
 }
 
-.window .header ul.menu li.menu-item:nth-child(5) {
+header .top-navigation ul.menu li.menu-item:nth-child(5) {
     transition-delay: 0.21s;
 }
 
-.window .header ul.menu li.menu-item:nth-child(6) {
+header .top-navigation ul.menu li.menu-item:nth-child(6) {
     transition-delay: 0.14s;
 }
 
-.window .header ul.menu li.menu-item:nth-child(7) {
+header .top-navigation ul.menu li.menu-item:nth-child(7) {
     transition-delay: 0.07s;
 }
 
-.window .header ul.menu li.menu-item a {
+header .top-navigation ul.menu li.menu-item a {
     display: block;
     position: relative;
     color: #fff;
-    font-family: 'Ek Mukta', sans-serif;
     font-weight: 100;
     text-decoration: none;
     font-size: 22px;
@@ -306,69 +274,64 @@ body {
     width: 100%;
 }
 
-.window .header.menu-opened {
+header .top-navigation.menu-opened {
     height: 100%;
     background-color: #000;
-    transition: all 0.3s ease-in, background 0.5s ease-in;
+    transition: all 0.3s ease-in, background-color 0.5s ease-in;
     transition-delay: 0.25s;
 }
 
-.window .header.menu-opened .burger-container {
+header .top-navigation.menu-opened .burger-container {
     transform: rotate(90deg);
 }
 
-.window .header.menu-opened .burger-container #burger .bar {
+header .top-navigation.menu-opened .burger-container #burger .bar {
     transition: all 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
     transition-delay: 0.2s;
 }
 
-.window .header.menu-opened .burger-container #burger .bar.topBar {
+header .top-navigation.menu-opened .burger-container #burger .bar.topBar {
     transform: translateY(4px) rotate(45deg);
 }
 
-.window .header.menu-opened .burger-container #burger .bar.btmBar {
+header .top-navigation.menu-opened .burger-container #burger .bar.btmBar {
     transform: translateY(3px) rotate(-45deg);
 }
 
-.window .header.menu-opened ul.menu li.menu-item {
+header .top-navigation.menu-opened ul.menu li.menu-item {
     transform: scale(1) translateY(0px);
     opacity: 1;
 }
 
-.window .header.menu-opened ul.menu li.menu-item:nth-child(1) {
+header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(1) {
     transition-delay: 0.27s;
 }
 
-.window .header.menu-opened ul.menu li.menu-item:nth-child(2) {
+header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(2) {
     transition-delay: 0.34s;
 }
 
-.window .header.menu-opened ul.menu li.menu-item:nth-child(3) {
+header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(3) {
     transition-delay: 0.41s;
 }
 
-.window .header.menu-opened ul.menu li.menu-item:nth-child(4) {
+header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(4) {
     transition-delay: 0.48s;
 }
 
-.window .header.menu-opened ul.menu li.menu-item:nth-child(5) {
+header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(5) {
     transition-delay: 0.55s;
 }
 
-.window .header.menu-opened ul.menu li.menu-item:nth-child(6) {
+header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(6) {
     transition-delay: 0.62s;
 }
 
-.window .header.menu-opened ul.menu li.menu-item:nth-child(7) {
+header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(7) {
     transition-delay: 0.69s;
 }
 
-.window .header.menu-opened .icon.icon-bag {
-    transform: translateX(75px);
-    transition-delay: 0.3s;
-}
-
-.window .content {
+header .content {
     font-family: 'Ek Mukta', sans-serif;
     padding: 67px 4% 0;
     text-align: justify;
@@ -376,38 +339,39 @@ body {
     max-height: 100%;
 }
 
-.window .content::-webkit-scrollbar {
+header .content::-webkit-scrollbar {
     display: none;
 }
 
-.window .content h2 {
+header .content h2 {
     margin-bottom: 0px;
     letter-spacing: 1px;
 }
 
-.window .content img {
+header .content img {
     width: 95%;
     position: relative;
     display: block;
     margin: 75px auto 75px;
 }
 
-.window .content img:nth-of-type(2) {
+header .content img:nth-of-type(2) {
     margin: 75px auto;
 }
 
 @media (max-width: 600px) {
-    .window {
+    header {
         width: 100%;
         height: 100vh;
         margin: 0;
         border-radius: 0px;
     }
 
-    .window .header {
+    header .top-navigation {
         position: fixed;
     }
 }
+
 
 /* ------------------------------------------------------------------------------------------------------
    ------------------------------------------------------------------------------------------------------  */
