--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -541,6 +541,7 @@ header .content img:nth-of-type(2) {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding-top: 20px;
 }
 
 .banner .text h1 {
