--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,45 @@
 
 /* ------------------------------------------------------------------------------------------------------
    ------------------------------------------------------------------------------------------------------  */
+/* Imports */
+@font-face {
+    font-family: 'Ubuntu';
+    font-style: italic;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Ubuntu Italic'), local('Ubuntu-Italic'), url(https://fonts.gstatic.com/s/ubuntu/v14/4iCu6KVjbNBYlgoKej70l0k.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    font-style: italic;
+    font-weight: 700;
+    font-display: swap;
+    src: local('Ubuntu Bold Italic'), local('Ubuntu-BoldItalic'), url(https://fonts.gstatic.com/s/ubuntu/v14/4iCp6KVjbNBYlgoKejZPslyPN4E.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url(https://fonts.gstatic.com/s/ubuntu/v14/4iCs6KVjbNBYlgoKfw72.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: local('Ubuntu Bold'), local('Ubuntu-Bold'), url(https://fonts.gstatic.com/s/ubuntu/v14/4iCv6KVjbNBYlgoCxCvjsGyN.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* ------------------------------------------------------------------------------------------------------
+   ------------------------------------------------------------------------------------------------------  */
 /* Page load animation */
 .fullpage-loader {
     position: fixed;
@@ -550,7 +589,6 @@ header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(7) {
     left: 50%;
     transform: translate(-50%, 0);
     position: relative;
-    padding-top: 50px;
 }
 
 .banner.short {
@@ -656,12 +694,12 @@ header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(7) {
 @keyframes letters600 {
     0% {
         transform: translateY(0) rotate(0deg);
-        opacity: 1;
+        opacity: 0.5;
         visibility: visible;
     }
 
     50% {
-        opacity: 0.5;
+        opacity: 0.25;
     }
 
     100% {
@@ -673,12 +711,12 @@ header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(7) {
 @keyframes letters400 {
     0% {
         transform: translateY(0) rotate(0deg);
-        opacity: 1;
+        opacity: 0.5;
         visibility: visible;
     }
 
     50% {
-        opacity: 0.5;
+        opacity: 0.25;
     }
 
     100% {
@@ -690,12 +728,12 @@ header .top-navigation.menu-opened ul.menu li.menu-item:nth-child(7) {
 @keyframes letters250 {
     0% {
         transform: translateY(0) rotate(0deg);
-        opacity: 1;
+        opacity: 0.5;
         visibility: visible;
     }
 
     50% {
-        opacity: 0.5;
+        opacity: 0.25;
     }
 
     100% {
