--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1078,10 +1078,12 @@ main .contact-form textarea {
 
 main .contact-form .recaptcha {
     border-radius: 6px;
+    max-width: 100%;
 }
 main .contact-form button {
     margin: 0;
     width: 160px;
+    height: 45px;
     border: none;
     border-radius: 6px;
     background-color: #2997ff;
