renamed-icons-and-changed-form-font

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1070,6 +1070,7 @@ main .contact-form textarea {
     font-family: Ubuntu, sans-serif;
     line-height: 2;
     color: #1f1f1f;
+    font-size: 18px;
 }
 
 main .contact-form textarea {
